--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -5,7 +5,7 @@
     --light-bg-color: #fefefe;
     --main-bg-color: #ecfdf5;
     --accent-color: #065f46;
-    --emojicon-highlight-color: #fcd34d;
+    --ranking-checked-color: #fcd34d;
   }
   
   * {
