date formatting +small changes for add and episode

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -5,6 +5,7 @@
     --light-bg-color: #fefefe;
     --main-bg-color: #ecfdf5;
     --accent-color: #065f46;
+    --ranking-default-color: #ddd;
     --ranking-checked-color: #fcd34d;
   }
   
