--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -1,21 +1,25 @@
 :root {
-    --main-font: Arial, Helvetica, sans-serif;
-    --main-text-color: #202020;
-    --light-text-color: #bbb;
-    --light-bg-color: #fefefe;
-    --main-bg-color: #ecfdf5;
-    --accent-color: #065f46;
-    --ranking-default-color: #ddd;
-    --ranking-checked-color: #fcd34d;
-  }
+  --main-font: Arial, Helvetica, sans-serif;
+  --main-text-color: #202020;
+  --light-text-color: #bbb;
+  --light-bg-color: #fefefe;
+  --main-bg-color: #ecfdf5;
+  --accent-color: #065f46;
+  --ranking-default-color: #ddd;
+  --ranking-checked-color: #fcd34d;
+}
   
-  * {
-    margin: 0;
-    padding: 0;
-  }
+* {
+  margin: 0;
+  padding: 0;
+}
   
-  body {
-    font-family: var(--main-font);
-    background: var(--main-bg-color);
-    color: #202020;
-  }
+body {
+  font-family: var(--main-font);
+  background: var(--main-bg-color);
+  color: #202020;
+}
+
+#app {
+  max-width: 1000px;
+}
