--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -23,3 +23,15 @@ body {
 #app {
   max-width: 1000px;
 }
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
